break create workspace and create workspace msg to 2 functions

--- a/.gitignore
+++ b/.gitignore
@@ -131,3 +131,7 @@ dmypy.json
 *.db
 inner_tests/secret_const.py
 slack_workflow_app/secret_const.py
+inner_tests/API-messages.py inner_tests/API-workflow.py inner_tests/API-workspace.py inner_tests/date_time.py inner_tests/general.py inner_tests/parse_slack_sdk_response.py inner_tests/print_tables.py inner_tests/test-APScheduler.py
+inner_tests/API-messages.py inner_tests/API-workflow.py inner_tests/API-workspace.py inner_tests/date_time.py inner_tests/general.py inner_tests/parse_slack_sdk_response.py inner_tests/print_tables.py inner_tests/test-APScheduler.py
+inner_tests
+dip_my_toes
